--- a/WebApiImagemSegurança/Web.config
+++ b/WebApiImagemSegurança/Web.config
@@ -9,6 +9,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings></appSettings>
+  <connectionStrings>
+    <add name="ImagemSegurancaDBConnectionString"
+    connectionString="Data Source=.;Initial Catalog=DB_IMAGEM_SEGURANCA;Integrated Security=true"
+    providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
