--- a/WebApiImagemSegurança/WebApiImagemSegurança.csproj
+++ b/WebApiImagemSegurança/WebApiImagemSegurança.csproj
@@ -100,17 +100,25 @@
     <Compile Include="Migrations\201904031429366_criacaoEstrutura.Designer.cs">
       <DependentUpon>201904031429366_criacaoEstrutura.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201904031920444_alteracaoPropriedades.cs" />
+    <Compile Include="Migrations\201904031920444_alteracaoPropriedades.Designer.cs">
+      <DependentUpon>201904031920444_alteracaoPropriedades.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Camera.cs" />
     <Compile Include="Models\Dispositivo.cs" />
     <Compile Include="Models\EventosDispositivo.cs" />
     <Compile Include="Models\Portao.cs" />
+    <Compile Include="Models\PortaoRepositorio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\CameraRepositorio.cs" />
     <Compile Include="Repository\ICameraRepository.cs" />
     <Compile Include="Repository\IEventosDispositivosRepository.cs" />
     <Compile Include="Repository\IPortaoRepository.cs" />
     <Compile Include="Repository\IRepository.cs" />
-    <Compile Include="Repository\IUnitDevices.cs" />
+    <Compile Include="Repository\IUnitWork.cs" />
+    <Compile Include="Repository\Repositorio.cs" />
+    <Compile Include="Repository\UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -128,6 +136,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201904031429366_criacaoEstrutura.resx">
       <DependentUpon>201904031429366_criacaoEstrutura.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201904031920444_alteracaoPropriedades.resx">
+      <DependentUpon>201904031920444_alteracaoPropriedades.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
