criação dos controllers de portão e camera

--- a/WebApiImagemSegurança/WebApiImagemSegurança.csproj
+++ b/WebApiImagemSegurança/WebApiImagemSegurança.csproj
@@ -93,6 +93,8 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Context\BD_Context.cs" />
+    <Compile Include="Controllers\CameraController.cs" />
+    <Compile Include="Controllers\PortaoController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -109,7 +111,7 @@
     <Compile Include="Models\Dispositivo.cs" />
     <Compile Include="Models\EventosDispositivo.cs" />
     <Compile Include="Models\Portao.cs" />
-    <Compile Include="Models\PortaoRepositorio.cs" />
+    <Compile Include="Repository\PortaoRepositorio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\CameraRepositorio.cs" />
     <Compile Include="Repository\ICameraRepository.cs" />
@@ -131,7 +133,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201904031429366_criacaoEstrutura.resx">
